--- a/sfg-id/pom.xml
+++ b/sfg-id/pom.xml
@@ -35,6 +35,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		        <!-- junit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
