--- a/sfg-pet-clinic/pom.xml
+++ b/sfg-pet-clinic/pom.xml
@@ -11,6 +11,9 @@
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<packaging>pom</packaging>
+	
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 
